<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_description">"This application needs this service to inject the clicks you have created into the other applications once the conditions have been detected.

No data will be collected from this application. Feel free to visit our github, the code is open source !"</string>
    <string name="activity_scenario_title">Scenarios</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_tutorial_name">Tutorial</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">"Klick'r"</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brief_empty_actions">No Actions. You need at least one Action to create a valid Event</string>
    <string name="brief_empty_image_conditions">No Screen Condition. You need at least one Condition to create a valid Event</string>
    <string name="button_condition_migration_finished">OK</string>
    <string name="button_condition_migration_running">Migrating</string>
    <string name="button_condition_migration_start">Migrate</string>
    <string name="button_deny">Deny</string>
    <string name="button_notification_config">Open settings</string>
    <string name="button_open_dont_kill_my_app">"Don't kill my app"</string>
    <string name="button_request_permission">Request permission</string>
    <string name="button_text_create_scenario">Create a scenario</string>
    <string name="button_text_tutorial_next">Next</string>
    <string name="button_text_tutorial_start_game">Start game</string>
    <string name="button_understood">Understood</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="content_desc_action_icon">The icon showing the type of action</string>
    <string name="content_desc_actions_count">The number of actions in this event</string>
    <string name="content_desc_add_action">Add a new action to the scenario</string>
    <string name="content_desc_add_button">The button to create an element</string>
    <string name="content_desc_add_scenario">Create a new scenario</string>
    <string name="content_desc_application_icon">The icon of the application to start.</string>
    <string name="content_desc_backup_state">The state of the backup</string>
    <string name="content_desc_conditions_count">The number of conditions in this event</string>
    <string name="content_desc_confirm">Confirm</string>
    <string name="content_desc_copy_button">The button to create a copy from an existing element</string>
    <string name="content_desc_drag_and_drop">Drag and drop to reorder the elements</string>
    <string name="content_desc_event_state">The state of the event</string>
    <string name="content_desc_go_back">Back to dialog</string>
    <string name="content_desc_image_condition">The image to be detected</string>
    <string name="content_desc_move_menu">Move the floating menu</string>
    <string name="content_desc_open_action_list">Open the list of actions</string>
    <string name="content_desc_open_event_list">Open the event list</string>
    <string name="content_desc_play_pause_scenario">Play or pause the scenario</string>
    <string name="content_desc_show_actions">Show or hide the actions created</string>
    <string name="content_desc_stop_clicker">"Stop Klick'r"</string>
    <string name="default_change_counter_name">Change counter</string>
    <string name="default_click_name">Click</string>
    <string name="default_condition_name">Condition</string>
    <string name="default_dumb_click_name">Click</string>
    <string name="default_dumb_pause_name">Wait</string>
    <string name="default_dumb_swipe_name">Swipe</string>
    <string name="default_event_name">Default event</string>
    <string name="default_intent_name">Intent</string>
    <string name="default_notification_name">Notification</string>
    <string name="default_pause_name">Wait</string>
    <string name="default_scenario_name">Default name</string>
    <string name="default_set_text_name">Write text</string>
    <string name="default_swipe_name">Swipe</string>
    <string name="default_system_action_name">System action</string>
    <string name="default_toggle_event_name">Toggle event</string>
    <string name="dest_title">destination title</string>
    <string name="dialog_condition_migration_title">Migration</string>
    <string name="dialog_intent_extra_title">Extra</string>
    <string name="dialog_move_to_position_label">Index</string>
    <string name="dialog_move_to_title">Move to</string>
    <string name="dialog_overlay_title_copy_from">Copy from</string>
    <string name="dialog_overlay_title_debug_report">Debug report</string>
    <string name="dialog_overlay_title_dumb_action_type">Action type</string>
    <string name="dialog_overlay_title_dumb_scenario_config">Scenario</string>
    <string name="dialog_overlay_title_warning">Warning</string>
    <string name="dialog_title_action_type">Action type</string>
    <string name="dialog_title_add_scenario">New scenario</string>
    <string name="dialog_title_application_selection">Select an application</string>
    <string name="dialog_title_broadcast_received">Broadcast received</string>
    <string name="dialog_title_change_counter">Change counter</string>
    <string name="dialog_title_click">Click</string>
    <string name="dialog_title_condition_config">Condition</string>
    <string name="dialog_title_condition_selection">Select a condition</string>
    <string name="dialog_title_copy_scenario">Copy scenario</string>
    <string name="dialog_title_counter_reached">Counter value</string>
    <string name="dialog_title_create_backup">Create backup</string>
    <string name="dialog_title_delete_scenario">Delete scenario</string>
    <string name="dialog_title_events_toggle">Events toggles</string>
    <string name="dialog_title_image_event">Screen Event</string>
    <string name="dialog_title_import_backup">Import backup</string>
    <string name="dialog_title_intent">Intent</string>
    <string name="dialog_title_intent_actions">Intent Actions</string>
    <string name="dialog_title_intent_component_name">Component name</string>
    <string name="dialog_title_intent_flags">Flags</string>
    <string name="dialog_title_notification">Notification</string>
    <string name="dialog_title_pause">Wait</string>
    <string name="dialog_title_permission_accessibility">Accessibility service</string>
    <string name="dialog_title_permission_issue">Troubleshooting</string>
    <string name="dialog_title_permission_mandatory_denied">Permission denied</string>
    <string name="dialog_title_permission_notification">Notification</string>
    <string name="dialog_title_permission_overlay">Overlay</string>
    <string name="dialog_title_scenario_config">Scenario</string>
    <string name="dialog_title_set_text_action">Write text</string>
    <string name="dialog_title_swipe">Swipe</string>
    <string name="dialog_title_system_action">System action</string>
    <string name="dialog_title_timer_reached">Timer reached</string>
    <string name="dialog_title_toggle_event">Event state</string>
    <string name="dialog_title_trigger_condition_type">Trigger type</string>
    <string name="dialog_title_trigger_event">Trigger</string>
    <string name="dialog_title_tutorial">Tutorial</string>
    <string name="dropdown_comparison_operator_item_equals">=</string>
    <string name="dropdown_comparison_operator_item_greater">></string>
    <string name="dropdown_comparison_operator_item_greater_or_equals">≥</string>
    <string name="dropdown_comparison_operator_item_lower">&lt;</string>
    <string name="dropdown_comparison_operator_item_lower_or_equals">≤</string>
    <string name="dropdown_comparison_operator_label">Operator</string>
    <string name="dropdown_counter_operation_item_add">+</string>
    <string name="dropdown_counter_operation_item_minus">-</string>
    <string name="dropdown_counter_operation_item_set">=</string>
    <string name="item_scenario_filter_by_favorite">Favorite</string>
    <string name="item_scenario_filter_by_name">Name</string>
    <string name="item_scenario_filter_by_recent">Recent</string>
    <string name="item_title_dumb_scenario">Simple</string>
    <string name="item_title_smart_scenario">Smart</string>
    <string name="menu_item_title_cancel">Cancel</string>
    <string name="menu_item_title_export">Export</string>
    <string name="menu_item_title_import">Import</string>
    <string name="menu_item_title_search">Search</string>
    <string name="menu_item_title_select_all">Select all</string>
    <string name="menu_item_title_settings">Settings</string>
    <string name="message_accessibility_issues">"It seems like the Accessibility Service permission has been removed several times. If you haven't changed it yourself, this means your device has removed it.

 Some Android devices manufacturer are not respecting the standard behaviour about background applications, and depending on your device brand, you might need to perform additional configuration.

 Please refer to the following website to find more insight about that issue and how you can improve the permission stability."</string>
    <string name="message_backup_create_progress">Creating backup: %1$d/%2$d</string>
    <string name="message_backup_import_compatibility">"Some of the imported scenarios have been generated from a device with a different screen and this might cause issues with the detection and action coordinates.

To fix it, you need to take new screenshots for your conditions and update your click/swipe positions."</string>
    <string name="message_empty_scenario_list">Create your first scenario and start automatizing tasks on your phone</string>
</resources>