<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:animateLayoutChanges="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:id="@id/menu_background" android:animateLayoutChanges="true" style="@style/AppTheme.Overlay.FloatingMenu.CardView">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <LinearLayout android:id="@id/menu_items" android:animateLayoutChanges="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/AppTheme.Overlay.FloatingMenu.LayoutButtons">
                <ImageButton android:id="@id/btn_back" android:src="@drawable/ic_back" android:contentDescription="@string/content_desc_play_pause_scenario" style="@style/AppTheme.Overlay.FloatingMenu.Buttons" />
                <ImageButton android:id="@id/btn_record" android:src="@drawable/ic_gesture_record" style="@style/AppTheme.Overlay.FloatingMenu.Buttons" />
                <ImageButton android:id="@id/btn_add" android:src="@drawable/ic_add" android:contentDescription="@string/content_desc_add_action" style="@style/AppTheme.Overlay.FloatingMenu.Buttons" />
                <ImageButton android:id="@id/btn_hide_overlay" android:src="@drawable/ic_visible_on" android:contentDescription="@string/content_desc_go_back" style="@style/AppTheme.Overlay.FloatingMenu.Buttons" />
                <ImageButton android:id="@id/btn_move" android:src="@drawable/ic_move" android:contentDescription="@string/content_desc_move_menu" style="@style/AppTheme.Overlay.FloatingMenu.Buttons" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>