<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButtonToggleGroup android:id="@id/button_group_ordering" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_vertical_default" app:layout_constraintBottom_toTopOf="@id/chipGroup" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:selectionRequired="true" app:singleSelection="true">
        <Button android:id="@id/button_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/item_scenario_filter_by_name" app:icon="@drawable/ic_sort_name" style="?materialButtonOutlinedStyle" />
        <Button android:id="@id/button_recent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/item_scenario_filter_by_recent" app:icon="@drawable/ic_sort_recent" style="?materialButtonOutlinedStyle" />
        <Button android:id="@id/button_most_used" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/item_scenario_filter_by_favorite" app:icon="@drawable/ic_sort_favourites" style="?materialButtonOutlinedStyle" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <com.google.android.material.chip.ChipGroup android:id="@id/chipGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_vertical_default" android:layout_marginBottom="@dimen/margin_vertical_default" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/checkbox_sort_order" app:layout_constraintStart_toStartOf="@id/button_group_ordering" app:layout_constraintTop_toBottomOf="@id/button_group_ordering">
        <com.google.android.material.chip.Chip android:id="@id/chip_smart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/item_title_smart_scenario" app:chipIcon="@drawable/ic_smart" style="@style/Widget.Material3.Chip.Filter" />
        <com.google.android.material.chip.Chip android:id="@id/chip_dumb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/item_title_dumb_scenario" app:chipIcon="@drawable/ic_dumb" style="@style/Widget.Material3.Chip.Filter" />
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.button.MaterialButton android:id="@id/checkbox_sort_order" android:layout_width="wrap_content" android:layout_height="wrap_content" app:icon="@drawable/ic_sort_order" app:layout_constraintBottom_toBottomOf="@id/chipGroup" app:layout_constraintEnd_toEndOf="@id/button_group_ordering" app:layout_constraintTop_toTopOf="@id/chipGroup" style="@style/AppTheme.Widget.CheckableButton" />
</androidx.constraintlayout.widget.ConstraintLayout>