<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appBarLayout" app:liftOnScroll="true" app:liftOnScrollTargetViewId="@id/list" style="@style/AppTheme.Widget.AppBarLayout">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/topAppBar" app:layout_scrollEffect="compress" app:layout_scrollFlags="scroll|enterAlways|snap" app:menu="@menu/menu_scenario_fragment" app:title="@string/activity_scenario_title" style="@style/AppTheme.Widget.Toolbar" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.airbnb.lottie.LottieAnimationView android:id="@id/empty_lottie_view" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/empty_text_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/lottie_empty" />
        <com.google.android.material.textview.MaterialTextView android:gravity="center_horizontal" android:id="@id/empty_text_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_default" android:layout_marginRight="@dimen/margin_horizontal_default" android:text="@string/message_empty_scenario_list" android:layout_marginHorizontal="@dimen/margin_horizontal_default" app:layout_constraintBottom_toTopOf="@id/empty_create_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/empty_lottie_view" style="@style/AppTheme.TextAppearance.EmptyText" />
        <com.google.android.material.button.MaterialButton android:id="@id/empty_create_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_large" android:layout_marginRight="@dimen/margin_horizontal_large" android:layout_marginBottom="@dimen/margin_vertical_large" android:text="@string/button_text_create_scenario" android:layout_marginHorizontal="@dimen/margin_horizontal_large" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/AppTheme.Widget.TextButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/list" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/margin_vertical_large" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <com.google.android.material.progressindicator.CircularProgressIndicator android:layout_gravity="center" android:id="@id/loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" style="@style/AppTheme.Widget.CircularProgressIndicator" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@id/add" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_horizontal_default" android:tint="@color/textTitle" android:contentDescription="@string/content_desc_add_scenario" app:layout_anchor="@id/list" app:layout_anchorGravity="end|bottom|center" app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" app:srcCompat="@drawable/ic_add" style="@style/AppTheme.Widget.Fab" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>