<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textview.MaterialTextView android:gravity="center" android:id="@id/title_permission" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_default" android:layout_marginTop="@dimen/margin_vertical_extra_large" android:layout_marginRight="@dimen/margin_horizontal_default" android:layout_marginBottom="@dimen/margin_vertical_extra_large" android:text="@string/dialog_title_permission_issue" android:layout_marginHorizontal="@dimen/margin_horizontal_default" android:layout_marginVertical="@dimen/margin_vertical_extra_large" style="@style/AppTheme.TextAppearance.TopBarTitle" />
    <com.google.android.material.divider.MaterialDivider android:id="@id/divider_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_vertical_large" />
    <androidx.core.widget.NestedScrollView android:id="@id/dialog_content" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.material.textview.MaterialTextView android:gravity="center" android:id="@id/desc_permission" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_default" android:layout_marginTop="@dimen/margin_vertical_default" android:layout_marginRight="@dimen/margin_horizontal_default" android:layout_marginBottom="@dimen/margin_vertical_large" android:text="@string/message_accessibility_issues" android:layout_marginHorizontal="@dimen/margin_horizontal_default" style="@style/AppTheme.TextAppearance.ListItemSubText" />
            <com.google.android.material.button.MaterialButton android:id="@id/button_open_website" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_extra_large" android:layout_marginTop="@dimen/margin_vertical_extra_large" android:layout_marginRight="@dimen/margin_horizontal_extra_large" android:layout_marginBottom="@dimen/margin_vertical_default" android:text="@string/button_open_dont_kill_my_app" android:layout_marginHorizontal="@dimen/margin_horizontal_extra_large" style="@style/AppTheme.Widget.TextButton" />
            <com.google.android.material.button.MaterialButton android:id="@id/button_understood" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_extra_large" android:layout_marginRight="@dimen/margin_horizontal_extra_large" android:layout_marginBottom="@dimen/margin_vertical_large" android:text="@string/button_understood" android:layout_marginHorizontal="@dimen/margin_horizontal_extra_large" style="@style/AppTheme.Widget.TextButtonOutlined" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>