<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:layout_gravity="center" android:layout_width="@dimen/dialog_export_icon_status_size" android:layout_height="@dimen/dialog_export_icon_status_size" android:layout_marginTop="@dimen/margin_vertical_extra_large" android:layout_marginBottom="@dimen/margin_vertical_extra_large" android:layout_marginVertical="@dimen/margin_vertical_extra_large">
            <ImageView android:id="@id/icon_status" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/img_save" android:scaleType="fitCenter" android:contentDescription="@string/content_desc_backup_state" />
            <ProgressBar android:layout_gravity="center" android:id="@id/loading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?android:progressBarStyleLarge" />
        </FrameLayout>
        <com.google.android.material.button.MaterialButton android:id="@id/text_file_selection" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_large" android:layout_marginRight="@dimen/margin_horizontal_large" android:layout_marginHorizontal="@dimen/margin_horizontal_large" style="@style/AppTheme.Widget.TextButtonOutlined" />
        <TextView android:gravity="center" android:id="@id/text_status" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_default" android:layout_marginRight="@dimen/margin_horizontal_default" android:text="@string/message_backup_create_progress" android:layout_marginHorizontal="@dimen/margin_horizontal_default" style="@style/AppTheme.TextAppearance.BodyLarge" />
        <LinearLayout android:orientation="vertical" android:id="@id/layout_compat_warning" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_horizontal_default" android:layout_marginTop="@dimen/margin_vertical_extra_large" android:layout_marginRight="@dimen/margin_horizontal_default" android:layout_marginBottom="@dimen/margin_vertical_default" android:layout_marginHorizontal="@dimen/margin_horizontal_default">
            <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/message_backup_import_compatibility" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_status" style="@style/AppTheme.TextAppearance.BodyLarge" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>